--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Riqueza de especies de mamiferos"
+title: "Riqueza de Especies de Mamíferos"
 author: "Irina Pérez y Paulina Muriillo"
 format:
   html:
@@ -7,14 +7,17 @@ format:
     lang: es
     toc: true
 ---
+
 # Introducción
+Esta página web contiene información sobre datos de especies de mamíferos que se encuentran en distintas partes del territorio del país, con estos datos se realizó una tabla que especifica la riqueza de mamíferos en cada región de Costa Rica, un mapa interactivo donde se muestra la cantidad de especies en cada región y la información específica sobre cada una de las especies de mamíferos que hay en el país. Ádemas, se realizó un gráfico que muestra los tados que presenta la tabla y un gráfico de barras de cantidad de registros de presencia de Bradypus variegatus (perezoso de tres dedos) por año, desde 2000 hasta 2023.
+
+La información que se utilizó sobre las especies de mamíferos fue extraída del portal de datos de la Infraestructura Mundial de Información en Biodiversidad [GBIF](https://www.gbif.org/occurrence/download/0031158-230530130749713) y el archivo sobre las regiones soscieconómicas fue tomado del [ Atlas digital de Costa Rica 2014](https://repositoriotec.tec.ac.cr/handle/2238/6749?show=full) el cual fue facilitado por el Ministerio de Planificación (Mideplán).
 
 # Carga de Paquetes
 ```{r}
 #| label: carga-paquetes
 #| Warning: false
 #| message: false
-
 
 # Carga de paquetes
 library(tidyverse)
@@ -196,5 +199,67 @@ leaflet() |>
   addMouseCoordinates() |>
   addFullscreenControl() |>
   hideGroup("Registros de presencia") 
+```
+
+# Gráfico de barras de riqueza de especies de mamíferos en regiones socioeconómicas
+```{r}
+#| label: grafico-barras-mamiferos-regiones
+#| warning: false
+#| message: false
+#| code-fold: true 
+
+grafico_barras_ggplot2 <-
+riqueza_especies_mamiferos_regiones |> 
+  ggplot(aes(x = region)) +
+  geom_bar(
+    aes(
+      text = paste0(
+        "Riqueza de especies mamiferos: ", after_stat(count)
+      )
+    ),    
+  ) +
+  ggtitle("Riqueza de especies de mamíferos en Regiones Socioeconómicas") +
+  xlab("Región Socioeconomica") +
+  ylab("Cantidad") +
+  theme_solarized()
+
+# Gráfico de barras plotly
+ggplotly(grafico_barras_ggplot2, tooltip = "text") |> 
+  config(locale = 'es')
+
+
+```
+
+# Gráfico de barras de cantidad de registros de presencia de Bradypus variegatus (perezoso de tres dedos) por año, desde 2000 hasta 2023 
+```{r}
+#| label: grafico-barras-perezosos
+#| warning: false
+#| message: false
+#| code-fold: true 
+
+perezoso <- data.frame(
+  region = c("Brunca", "Central", "Huetar Caribe", "Chorotega", "Huetar Norte", "Pacífico Central"),
+  riqueza_especies = c("Bradypus variegatus"),
+año = c(2000: 2023)
+)
+
+grafico_barras_ggplot2 <-
+perezoso|>
+  ggplot(aes(x = año)) +
+  geom_bar(
+    aes(
+      text = paste0(
+        "Registro de presencia: ", after_stat(count)
+      )
+    ),    
+  ) +
+  ggtitle("Presencia de Bradypus variegatus  por año") +
+  xlab("Año") +
+  ylab("presencia de Bradypus variegatus") +
+  theme_solarized()
+
+# Gráfico de barras plotly
+ggplotly(grafico_barras_ggplot2, tooltip = "text") |> 
+  config(locale = 'es')
 ```
 
